--- a/src/css-builder/styles/form/index.css
+++ b/src/css-builder/styles/form/index.css
@@ -19,6 +19,4 @@
 @import './variants.css';
 @import './utilities.css';
 
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
