--- a/src/css-builder/styles/heading/index.css
+++ b/src/css-builder/styles/heading/index.css
@@ -16,6 +16,4 @@
 @import './variants.css';
 @import './utilities.css';
 
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
