--- a/src/css-builder/styles/image/index.css
+++ b/src/css-builder/styles/image/index.css
@@ -20,6 +20,4 @@
 @import './variants.css';
 @import './utilities.css';
 
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
