--- a/src/css-builder/styles/infobox/index.css
+++ b/src/css-builder/styles/infobox/index.css
@@ -17,6 +17,4 @@
 @import './variants.css';
 @import './utilities.css';
 
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
