--- a/src/css-builder/styles/styles.css
+++ b/src/css-builder/styles/styles.css
@@ -1,3 +1,11 @@
+@import '../../styles/global.css';
+
 @import './class-builder.css';
 @import './builder.css';
+
+@import './utils.css';
+
+@tailwind base;
 @tailwind components;
+@tailwind utilities;
+
