--- a/src/css-builder/layouts/Menu.astro
+++ b/src/css-builder/layouts/Menu.astro
@@ -1,6 +1,6 @@
 ---
 const pages = Object.values(
-	import.meta.glob('../../pages/docs/css/*.astro', { eager: true })
+	import.meta.glob('../../pages/css-builder/*.astro', { eager: true })
 )
 
 const menuItems = Object.values(pages).filter((item) => {
