--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,33 +1,18 @@
 /* グローバル変数の定義 */
 @layer base {
 :root {
-	--primary: #47791b;
-	--primary-rgb: 71, 121, 27;
-	--primary-light: #dae2d9;
-	--primary-light-rgb: 218, 226, 217;
-	--primary-dark: #2e5230;
-	--primary-dark-rgb: 42, 58, 43;
-
-	--secondary: #a04c22;
-	--secondary-rgb: 121, 71, 46;
-	--secondary-light: #d0c9c1;
-	--secondary-light-rgb: 208, 201, 193;
-	--secondary-dark: #693a30;
-	--secondary-dark-rgb: 63, 57, 56;
-
-	--neutral: #c3c1bb;
-	--neutral-rgb: 195, 193, 187;
-	--neutral-light: #f5f4f0;
-	--neutral-light-rgb: 245, 244, 240;
-	--neutral-dark: #362e2b;
-	--neutral-dark-rgb: 54, 46, 43;
-
-	--accent: #a83610;
-	--accent-rgb: 227, 98, 28;
+	--primary: #1b6e79;
+	--primary-light: #dae2e2;
+	--primary-dark: #2e4652;
+	--secondary: #5a994d;
+	--secondary-light: #e8f8dd;
+	--secondary-dark: #416435;
+	--accent: #b11b1b;
 	--accent-light: #f5e6e0;
-	--accent-light-rgb: 245, 230, 224;
 	--accent-dark: #572911;
-	--accent-dark-rgb: rgb(87, 41, 17);
+	--neutral: #d4d4d4;
+	--neutral-light: #f0f0f0;
+	--neutral-dark: #333333;
 
 	--success: #0b6a81;
 	--success-rgb: rgb(11, 106, 129);
@@ -36,34 +21,11 @@
 	--error: #c03831;
 	--error-rgb: rgb(192, 56, 49);
 
-	/* hero フォルダ内のパターン背景 */
-	--bg-hero-bank-note: url('/images/patterns/hero/bank-note.svg');
-	--bg-hero-stripes: url('/images/patterns/hero/stripes.svg');
-	--bg-hero-brick-wall: url('/images/patterns/hero/brick-wall.svg');
-	--bg-hero-bubbles: url('/images/patterns/hero/bubbles.svg');
-	--bg-hero-leaf: url('/images/patterns/hero/leaf.svg');
-	--bg-hero-polka-dots: url('/images/patterns/hero/polka-dots.svg');
-	--bg-hero-diagonal-lines: url('/images/patterns/hero/diagonal-lines.svg');
-	--bg-hero-texture: url('/images/patterns/hero/texture.svg');
-	--bg-hero-endless-clouds: url('/images/patterns/hero/endless-clouds.svg');
-	--bg-hero-graph-paper: url('/images/patterns/hero/graph-paper.svg');
-	--bg-hero-diagonal-stripes: url('/images/patterns/hero/diagonal-stripes.svg');
-	--bg-hero-plus: url('/images/patterns/hero/plus.svg');
-
-	/* subtle フォルダ内のパターン背景 */
-	--bg-subtle-gravel: url('/images/patterns/subtle/gravel.webp');
-	--bg-subtle-worn-dots: url('/images/patterns/subtle/worn_dots.png');
-	--bg-subtle-naturalwhite: url('/images/patterns/subtle/naturalwhite.webp');
-	--bg-subtle-45degree-fabric: url('/images/patterns/subtle/45degreee_fabric.webp');
-	--bg-subtle-tree-bark: url('/images/patterns/subtle/tree_bark.png');
-	--bg-subtle-geometric-leaves: url('/images/patterns/subtle/geometric-leaves.webp');
 }
 
 :root.dark {
-	--neutral-light: #362e2b;
-	--neutral-light-rgb: 54, 46, 43;
-	--neutral-dark: #f5f4f0;
-	--neutral-dark-rgb: 245, 244, 240;
+	--neutral-light: #333333;
+	--neutral-dark: #f0f0f0;
 }
 
 
