tailwind読み込み順OK

--- a/src/css-builder/layouts/Layout.astro
+++ b/src/css-builder/layouts/Layout.astro
@@ -8,7 +8,7 @@ const { title = 'title', desc = 'description' } = Astro.props
 
 // スタイルシートのインポート
 import '@stylesCss/styles.css'
-import '@stylesCss/all-components.css'
+//import '@stylesCss/all-components.css'
 
 const mainClass = 'container mx-auto px-global max-w-screen-2xl'
 ---
