button,text style

--- a/src/css-builder/components/astro/ThemeSwitcher.astro
+++ b/src/css-builder/components/astro/ThemeSwitcher.astro
@@ -1,9 +1,9 @@
 ---
-import ToggleSwitch from '@components/common/button/ToggleSwitch.astro'
+import ToggleSwitch from './ToggleSwitch.astro'
 import type { IconDefinition } from '@fortawesome/fontawesome-svg-core'
 import { faMoon } from '@fortawesome/free-solid-svg-icons'
-import type { Theme } from '@components/utils/theme'
-import { classesToString } from '@components/utils/theme'
+import type { Theme } from './theme'
+import { classesToString } from './theme'
 
 export interface Props {
 	/** コンポーネントの位置を指定するTailwindクラス */
