--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,11 +15,11 @@ import Menu from '@layouts/Menu.astro'
 			</p>
 		</div>
 
-		<div class='bg-neutral-light rounded-lg shadow-sm p-6'>
+		<div class='rounded-lg shadow-sm p-6'>
 			<ClassBuilder client:load />
 		</div>
 
-		<div class='p-4 bg-neutral-light rounded-lg'>
+		<div class='p-4 rounded-lg'>
 			<h2 class='font-bold mb-2'>使い方</h2>
 			<ol class='list-decimal list-inside space-y-2 ml-4 text-sm'>
 				<li>左側のパネルからコンポーネントタイプを選択</li>
@@ -33,7 +33,7 @@ import Menu from '@layouts/Menu.astro'
 
 		<Menu />
 
-		<div class='mt-10 p-4 bg-neutral-light rounded-lg text-sm'>
+		<div class='mt-10 p-4 rounded-lg text-sm'>
 			<h3 class='font-bold mb-2'>参照スタイルシート</h3>
 			<p>
 				このビルダーは以下のスタイルシートで定義されたカスタムクラスを使用しています：
