--- a/src/css-builder/styles/builder.css
+++ b/src/css-builder/styles/builder.css
@@ -1,5 +1,21 @@
+@layer base {
+	input,
+	textarea {
+		background-color: var(--background);
+		color: var(--foreground);
+		border: var(--border) 1px solid;
+	}
+}
+
 @layer components {
 	/* 追加クラスラベル */
+	.code-aria {
+		@apply font-mono;
+		background-color: var(--background);
+		color: var(--foreground);
+		border: var(--border) 1px solid;
+	}
+
 	.label-custom::after {
 		background-color: var(--accent);
 	}
@@ -25,8 +41,8 @@
 		@apply text-left justify-start;
 	}
 
-	.selector-button:hover{
-		background-color: var(--primary-light)!important;
+	.selector-button:hover {
+		background-color: var(--primary-light) !important;
 	}
 
 	.selector-button::after {
@@ -48,9 +64,9 @@
 		@apply bg-primary text-white font-medium shadow-sm;
 	}
 
-	.selector-button.active::after {
+	/* .selector-button.active::after {
 		background-color: var(--primary-dark) !important;
-	}
+	} */
 
 	/* コンポーネントセレクター */
 	.selector-component {
@@ -100,7 +116,7 @@
 
 	/* 共通のセクションラベルスタイル */
 	.label-config {
-		color: var(--neutral-dark);
+		color: var(--foreground);
 		padding-bottom: 0.3rem;
 		position: relative;
 
