--- a/src/css-builder/styles/all-components.css
+++ b/src/css-builder/styles/all-components.css
@@ -5,3 +5,4 @@
 @import './image/index.css';
 @import './infobox/index.css';
 @import './text/index.css';
+@import './badge/index.css'; /* 新しいbadgeコンポーネントのインポートを追加 */
