feat: ボタンコンポーネントのスタイル改修とバリエーション追加
- モノクロバリエーションを形状バリアントとして再構築 (solid, outline, ghost, link, gradient, flat, subtle, icon, icon-outline, icon-ghost)
- グラデーションボタンに疑似要素を用いたアニメーションを追加
- 新旧バリアントの互換性を保つためのブリッジファイルを追加
- base.cssにtransition-property: all;を追加
- 各バリエーションに詳細なドキュメンテーションコメントを追加

--- a/src/css-builder/styles/button/base.css
+++ b/src/css-builder/styles/button/base.css
@@ -166,6 +166,7 @@
 		border-width: var(--btn-border-width);
 		border-style: solid;
 		border-radius: var(--btn-border-radius);
+		transition-property: all;
 		transition-duration: var(--btn-transition-duration);
 	}
 
