--- a/src/css-builder/styles/heading/index.css
+++ b/src/css-builder/styles/heading/index.css
@@ -13,5 +13,5 @@
  * <h3 class="heading-casual-accent">サブ見出し</h3>
  */
 @import './base.css';
-@import './variants.css';
+@import './variants-monochrome.css';
 @import './utilities.css';
